# openclaw-iphone-ops

./: .env.example  .gitignore  README.md  pyproject.toml
docs/: agent-automation-guide.md  app-store-installs.md  launchagent-service.md  mechanics.md  troubleshooting.md
skills/ios-instagram/: SKILL.md
skills/ios-instagram/agents/: openai.yaml
skills/iphone-control/: SKILL.md
skills/iphone-control/agents/: openai.yaml
snippets/: iphone-doctor.sh  iphone-installed-apps.sh  iphone-launch-app.sh  iphone-lib.sh  iphone-lock-state.sh  wda-app-store-install-example.py  wda-smoke.sh
snippets/launchd/: com.openclaw.iphone-watchdog.plist.template  com.openclaw.iphone-wda-run.plist.template  com.openclaw.iphone-wda-tunnel.plist.template  install-watchdog-launchagent.sh  install-wda-run-launchagent.sh  openclaw-iphone-watchdog.sh  openclaw-iphone-wda-run.sh  openclaw-iphone-wda-tunnel.sh
src/openclaw_iphone/: __init__.py  cli.py  config.py  devicectl.py  errors.py  evidence.py  instagram_context.py  instagram_ops.py  runner.py  ui.py  wda.py  xcode.py
src/openclaw_iphone/recipes/: __init__.py  instagram.py
tests/: test_cli_config.py  test_config.py  test_devicectl.py  test_instagram_context.py  test_instagram_ops.py  test_launchd_installers.py  test_runner.py  test_ui.py  test_wda.py
