[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "openclaw-iphone-ops"
version = "0.1.0"
description = "Reusable primitives for controlling USB-connected iPhones from OpenClaw agents."
readme = "README.md"
requires-python = ">=3.11"
dependencies = []

[project.scripts]
openclaw-iphone = "openclaw_iphone.cli:main"

[tool.setuptools.packages.find]
where = ["src"]

